adjust horizontal spacing of block divs on home page - issue #754

--- a/themes/accuray/css/panels-styles.css
+++ b/themes/accuray/css/panels-styles.css
@@ -235,7 +235,7 @@ div.panel-pane, div.node {
 #panel-page-home .panels-flexible-region-inside {
   background: #e5e5e5;
   height: 250px;
-  overflow: auto;
+  /*overflow: auto;*/
 }
 
 #panel-page-home .panels-flexible-region-first .panels-flexible-region-inside /* The leftmost region gets a blue background */ {
